crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_query_with_directives.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "query { user @skip(if: true) { id } }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 37,
                    },
                    operation_type: Query,
                    name: None,
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 8,
                                        end: 35,
                                    },
                                    alias: None,
                                    name: Name(
                                        "user",
                                    ),
                                    arguments: [],
                                    directives: [
                                        Directive {
                                            span: Span {
                                                start: 13,
                                                end: 28,
                                            },
                                            name: Name(
                                                "skip",
                                            ),
                                            arguments: [
                                                Argument {
                                                    span: Span {
                                                        start: 19,
                                                        end: 27,
                                                    },
                                                    name: Name(
                                                        "if",
                                                    ),
                                                    value: Boolean(
                                                        true,
                                                    ),
                                                },
                                            ],
                                        },
                                    ],
                                    selection_set: SelectionSet {
                                        selections: [
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 31,
                                                        end: 35,
                                                    },
                                                    alias: None,
                                                    name: Name(
                                                        "id",
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
