crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_query_with_object_argument.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "query { createUser(input: { name: \"John\", age: 30 }) { id } }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 61,
                    },
                    operation_type: Query,
                    name: None,
                    variable_definitions: [],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 8,
                                        end: 59,
                                    },
                                    alias: None,
                                    name: Name(
                                        "createUser",
                                    ),
                                    arguments: [
                                        Argument {
                                            span: Span {
                                                start: 19,
                                                end: 51,
                                            },
                                            name: Name(
                                                "input",
                                            ),
                                            value: Object(
                                                [
                                                    ObjectField {
                                                        name: Name(
                                                            "name",
                                                        ),
                                                        value: String(
                                                            "John",
                                                        ),
                                                    },
                                                    ObjectField {
                                                        name: Name(
                                                            "age",
                                                        ),
                                                        value: Int(
                                                            "30",
                                                        ),
                                                    },
                                                ],
                                            ),
                                        },
                                    ],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 55,
                                                        end: 59,
                                                    },
                                                    alias: None,
                                                    name: Name(
                                                        "id",
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
