crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_repeatable_directive.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "directive @tag(name: String!) repeatable on FIELD",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystem(
            Directive(
                DirectiveDefinition {
                    description: None,
                    name: Name(
                        "tag",
                    ),
                    arguments: [
                        InputValueDefinition {
                            description: None,
                            name: Name(
                                "name",
                            ),
                            typ: NonNull(
                                Named(
                                    NamedType {
                                        name: "String",
                                    },
                                ),
                            ),
                            default_value: None,
                            directives: [],
                        },
                    ],
                    repeatable: true,
                    locations: [
                        Field,
                    ],
                },
            ),
        ),
    ],
}
