crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_scalar_definition.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "scalar DateTime",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystem(
            Type(
                Scalar(
                    ScalarTypeDefinition {
                        description: None,
                        name: Name(
                            "DateTime",
                        ),
                        directives: [],
                    },
                ),
            ),
        ),
    ],
}
