crates/native/tests/snapshots/snapshots/snapshot_tests__snapshots__snapshot_tests__snapshot_schema_definition.snap
---
source: native/tests/snapshots/snapshot_tests.rs
expression: result
---
Document {
    source: Source {
        code: "schema { query: Query mutation: Mutation }",
        file_path: "test.graphql",
        start_line: 0,
    },
    definitions: [
        TypeSystem(
            Schema(
                SchemaDefinition {
                    description: None,
                    directives: [],
                    query: Some(
                        Name(
                            "Query",
                        ),
                    ),
                    mutation: Some(
                        Name(
                            "Mutation",
                        ),
                    ),
                    subscription: None,
                },
            ),
        ),
    ],
}
